themes/research7/style.css
/* ... */
.ui-tabs .ui-tabs-nav li a {
    float: none !important;
    padding: 0 1em 0 0 !important;
    text-decoration: none !important;
}
.ui-tabs .ui-tabs-panel {
    padding: 0 !important;
}

.ui-tabs ul.ui-tabs-nav li {
    white-space: initial;
    padding-left: 2em;
    text-indent: -2em;
}
.ui-widget-content, .ui-widget-content {
    border: none !important;
    background: none !important;
}

.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default, .ui-widget-header {
    border: none !important;
    background: none !important;
    font-weight: bold !important;
}
.ui-state-active a:link, .ui-tabs-selected a:link {
    color: white !important;
    background: #0074BD !important;
}

/* Some responsiveness */
@media (min-width: 1024px) {
    ul.ui-tabs-nav {
        max-width: 15%;
        padding-top: 1em !important;
        float: left;
    }
    .panel-1col .panel-col {
        max-width: 52em;
        float: left;
    }
    .panel-2col .panel-col-first, .panel-2col .panel-col-last {
        max-width: 42% !important;
    }
    .panel-3col-33 .panel-col-first, .panel-3col-33 .panel-col, .panel-3col-33 .panel-col-last {
        max-width: 28% !important;
    }
    .panel-3col .panel-col-first, .panel-3col .panel-col-last {
        max-width: 22% !important;
    }
    .panel-3col .panel-col {
        max-width: 40% !important;
    }
}
@media (max-width: 600px) {
    h1.site-name {
        position: inherit;
        top: inherit;
        clear: both;
        display: inherit;
    }
    .panel-2col .panel-col-first, .panel-2col .panel-col-last,
    .panel-3col-33 .panel-col-first, .panel-3col-33 .panel-col, .panel-3col-33 .panel-col-last,
    .panel-3col .panel-col, .panel-3col .panel-col-first, .panel-3col .panel-col-last {
        float: none !important;
        width: 100% !important;
    }
    .ui-tabs .ui-tabs-nav li a {
        padding: 0 !important;
    }
    .rounded-corner .wrap-corner .r-edge {
        padding: 0;
    }
    .inside h2 {
        margin: inherit;
    }
    .rounded-corner .l-edge, .rounded-corner .t-edge, .rounded-corner .r-edge {
        background: none !important;
    }
    .rounded-corner .wrap-corner .l, .rounded-corner .wrap-corner .r {
        background-image: none !important;
    }
    .ui-widget-content {
        border: none !important;
        background: none !important;
    }
}

